Updated .gitignore file and added market to GeoJSON file

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+# Ignore environment file
 .env
-# Ignore .joblib files
+
+# Ignore joblib files
 *.joblib
+
+# Ignore CSV files
+*.csv
+
+# Ignore GeoJSON files
+*.geojson
+
+# Ignore HTML files
+*.html
