--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-boto3==1.21.32
-folium==0.17.0
-joblib==1.1.0
+boto3
+folium
+joblib
 matplotlib
-nltk==3.7
-pandas==1.5.3
-python-dotenv==1.0.1
+nltk
+pandas
+python-dotenv
 scikit_learn
-snowflake_connector_python==3.11.0
-streamlit==1.21.0
-streamlit_folium==0.22.0
-wordcloud==1.9.3
+snowflake_connector_python
+streamlit
+streamlit_folium
+wordcloud
